--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
     "axios": "^0.15.3"
+  },
+  "dependencies": {
+    "parsleyjs": "^2.6.0",
+    "select2": "^4.0.3"
   }
 }
