--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.15.3"
   },
   "dependencies": {
+    "chart.js": "^2.5.0",
     "parsleyjs": "^2.6.0",
     "select2": "^4.0.3"
   }
